// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userEvent.type on TextInput: entry events 1`] = `
[
  {
    "id": 0,
    "name": "pressIn",
    "nativeEvent": {
      "changedTouches": [],
      "identifier": 0,
      "locationX": 0,
      "locationY": 0,
      "pageX": 0,
      "pageY": 0,
      "target": 0,
      "timestamp": 1682759916812,
      "touches": [],
    },
  },
  {
    "id": 1,
    "name": "focus",
    "nativeEvent": {
      "target": 0,
    },
  },
  {
    "id": 2,
    "name": "pressOut",
    "nativeEvent": {
      "changedTouches": [],
      "identifier": 0,
      "locationX": 0,
      "locationY": 0,
      "pageX": 0,
      "pageY": 0,
      "target": 0,
      "timestamp": 1682759916814,
      "touches": [],
    },
  },
]
`;

exports[`userEvent.type on TextInput: exit events 1`] = `
[
  {
    "id": 18,
    "name": "onSubmitEditing",
    "nativeEvent": {
      "target": 0,
      "text": "ABC",
    },
  },
  {
    "id": 19,
    "name": "blur",
    "nativeEvent": {
      "target": 0,
    },
  },
]
`;

exports[`userEvent.type on TextInput: typing events 1`] = `
[
  {
    "id": 3,
    "name": "keyPress",
    "nativeEvent": {
      "key": "A",
    },
  },
  {
    "id": 4,
    "name": "textInput",
    "nativeEvent": {
      "previousText": "",
      "range": {
        "end": 1,
        "start": 1,
      },
      "target": 0,
      "text": "A",
    },
  },
  {
    "id": 5,
    "name": "change",
    "nativeEvent": {
      "target": 0,
      "text": "A",
    },
  },
  {
    "id": 6,
    "name": "changeText",
    "nativeEvent": undefined,
  },
  {
    "id": 7,
    "name": "selectionChange",
    "nativeEvent": {
      "selection": {
        "end": 1,
        "start": 1,
      },
    },
  },
  {
    "id": 8,
    "name": "keyPress",
    "nativeEvent": {
      "key": "B",
    },
  },
  {
    "id": 9,
    "name": "textInput",
    "nativeEvent": {
      "previousText": "A",
      "range": {
        "end": 2,
        "start": 2,
      },
      "target": 0,
      "text": "AB",
    },
  },
  {
    "id": 10,
    "name": "change",
    "nativeEvent": {
      "target": 0,
      "text": "AB",
    },
  },
  {
    "id": 11,
    "name": "changeText",
    "nativeEvent": undefined,
  },
  {
    "id": 12,
    "name": "selectionChange",
    "nativeEvent": {
      "selection": {
        "end": 2,
        "start": 2,
      },
    },
  },
  {
    "id": 13,
    "name": "keyPress",
    "nativeEvent": {
      "key": "C",
    },
  },
  {
    "id": 14,
    "name": "textInput",
    "nativeEvent": {
      "previousText": "AB",
      "range": {
        "end": 3,
        "start": 3,
      },
      "target": 0,
      "text": "ABC",
    },
  },
  {
    "id": 15,
    "name": "change",
    "nativeEvent": {
      "target": 0,
      "text": "ABC",
    },
  },
  {
    "id": 16,
    "name": "changeText",
    "nativeEvent": undefined,
  },
  {
    "id": 17,
    "name": "selectionChange",
    "nativeEvent": {
      "selection": {
        "end": 3,
        "start": 3,
      },
    },
  },
]
`;

exports[`userEvent.type skips press events when \`skipPress: true\`: events without press events 1`] = `
[
  {
    "id": 0,
    "name": "focus",
    "nativeEvent": {
      "target": 0,
    },
  },
  {
    "id": 1,
    "name": "keyPress",
    "nativeEvent": {
      "key": "a",
    },
  },
  {
    "id": 2,
    "name": "textInput",
    "nativeEvent": {
      "previousText": "",
      "range": {
        "end": 1,
        "start": 1,
      },
      "target": 0,
      "text": "a",
    },
  },
  {
    "id": 3,
    "name": "change",
    "nativeEvent": {
      "target": 0,
      "text": "a",
    },
  },
  {
    "id": 4,
    "name": "changeText",
    "nativeEvent": undefined,
  },
  {
    "id": 5,
    "name": "selectionChange",
    "nativeEvent": {
      "selection": {
        "end": 1,
        "start": 1,
      },
    },
  },
  {
    "id": 6,
    "name": "keyPress",
    "nativeEvent": {
      "key": "b",
    },
  },
  {
    "id": 7,
    "name": "textInput",
    "nativeEvent": {
      "previousText": "a",
      "range": {
        "end": 2,
        "start": 2,
      },
      "target": 0,
      "text": "ab",
    },
  },
  {
    "id": 8,
    "name": "change",
    "nativeEvent": {
      "target": 0,
      "text": "ab",
    },
  },
  {
    "id": 9,
    "name": "changeText",
    "nativeEvent": undefined,
  },
  {
    "id": 10,
    "name": "selectionChange",
    "nativeEvent": {
      "selection": {
        "end": 2,
        "start": 2,
      },
    },
  },
  {
    "id": 11,
    "name": "keyPress",
    "nativeEvent": {
      "key": "c",
    },
  },
  {
    "id": 12,
    "name": "textInput",
    "nativeEvent": {
      "previousText": "ab",
      "range": {
        "end": 3,
        "start": 3,
      },
      "target": 0,
      "text": "abc",
    },
  },
  {
    "id": 13,
    "name": "change",
    "nativeEvent": {
      "target": 0,
      "text": "abc",
    },
  },
  {
    "id": 14,
    "name": "changeText",
    "nativeEvent": undefined,
  },
  {
    "id": 15,
    "name": "selectionChange",
    "nativeEvent": {
      "selection": {
        "end": 3,
        "start": 3,
      },
    },
  },
  {
    "id": 16,
    "name": "onSubmitEditing",
    "nativeEvent": {
      "target": 0,
      "text": "abc",
    },
  },
  {
    "id": 17,
    "name": "blur",
    "nativeEvent": {
      "target": 0,
    },
  },
]
`;
